--- a/ReactNativeReduxDemo/package.json
+++ b/ReactNativeReduxDemo/package.json
@@ -7,8 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.6.3",
-    "react-native": "0.57.8",
+    "react": "16.7.0",
+    "react-native": "0.58.0-rc.2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
   },
