--- a/ReactNativeMobxDemo/package.json
+++ b/ReactNativeMobxDemo/package.json
@@ -7,13 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "jsc-android": "^236355.1.1",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "react": "16.6.3",
     "react-native": "0.57.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/runtime": "^7.2.0",
     "babel-jest": "23.6.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3"
